New model classes added

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\F1Tippspiel.Api\packages.config" />
+  <repository path="..\F1Tippspiel.Db\packages.config" />
   <repository path="..\F1Tippspiel.Web\packages.config" />
 </repositories>
