--- a/F1Tippspiel.Db/F1Tippspiel.Db.csproj
+++ b/F1Tippspiel.Db/F1Tippspiel.Db.csproj
@@ -56,14 +56,14 @@
     <Compile Include="Game\Season.cs" />
     <Compile Include="Game\Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rewards\Achievement.cs" />
+    <Compile Include="Rewards\Badge.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
