--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\F1Tippspiel.Api\packages.config" />
   <repository path="..\F1Tippspiel.Db\packages.config" />
+  <repository path="..\F1Tippspiel.Test\packages.config" />
   <repository path="..\F1Tippspiel.Web\packages.config" />
 </repositories>
