--- a/F1Tippspiel.Web/packages.config
+++ b/F1Tippspiel.Web/packages.config
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Auth.Mvc" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Plus.v1" version="1.9.0.2020" targetFramework="net45" />
+  <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.de" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.de" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.de" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
@@ -20,5 +24,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="TweetSharp" version="2.3.1" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.MVC" version="2.1.6" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.4" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
