--- a/F1Tippspiel.Db/F1Tippspiel.Db.csproj
+++ b/F1Tippspiel.Db/F1Tippspiel.Db.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rewards\Achievement.cs" />
     <Compile Include="Rewards\Badge.cs" />
+    <Compile Include="Tools\Hasher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
