Added possibility for issuing refresh tokens instead of logging in all over again

--- a/F1Tippspiel.Db/F1Tippspiel.Db.csproj
+++ b/F1Tippspiel.Db/F1Tippspiel.Db.csproj
@@ -88,7 +88,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account\UserAccount.cs" />
+    <Compile Include="Authentication\ApplicationType.cs" />
+    <Compile Include="Authentication\Client.cs" />
+    <Compile Include="Authentication\RefreshToken.cs" />
+    <Compile Include="Authentication\UserAccount.cs" />
     <Compile Include="Communication\Comment.cs" />
     <Compile Include="Communication\UserMessage.cs" />
     <Compile Include="Data\AppContext.cs" />
