--- a/F1Tippspiel.Api/F1Tippspiel.Api.csproj
+++ b/F1Tippspiel.Api/F1Tippspiel.Api.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Controllers\SeasonController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
+    <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
