--- a/F1Tippspiel.Test/F1Tippspiel.Test.csproj
+++ b/F1Tippspiel.Test/F1Tippspiel.Test.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup\DbSetup.cs" />
     <Compile Include="Setup\Initializer.cs" />
+    <Compile Include="Tools\HasherTest.cs" />
     <Compile Include="Web\HomeControllerTest.cs" />
     <Compile Include="Web\WebDbInitializer.cs" />
   </ItemGroup>
