--- a/F1Tippspiel.Db/F1Tippspiel.Db.csproj
+++ b/F1Tippspiel.Db/F1Tippspiel.Db.csproj
@@ -106,8 +106,10 @@
     <Compile Include="Models\Account\RegisterUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
+    <Compile Include="Models\Account\ResetPassword.cs" />
     <Compile Include="Rewards\Achievement.cs" />
     <Compile Include="Rewards\Badge.cs" />
+    <Compile Include="Tools\Generator.cs" />
     <Compile Include="Tools\Hasher.cs" />
   </ItemGroup>
   <ItemGroup>
