--- a/F1Tippspiel.Db/F1Tippspiel.Db.csproj
+++ b/F1Tippspiel.Db/F1Tippspiel.Db.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
     <Compile Include="Models\Account\ResetPassword.cs" />
+    <Compile Include="Repositories\SeasonRepository.cs" />
     <Compile Include="Rewards\Achievement.cs" />
     <Compile Include="Rewards\Badge.cs" />
     <Compile Include="Tools\Generator.cs" />
