--- a/F1Tippspiel.Api/F1Tippspiel.Api.csproj
+++ b/F1Tippspiel.Api/F1Tippspiel.Api.csproj
@@ -166,6 +166,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\SeasonController.cs" />
+    <Compile Include="Models\PlayerStandingsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
