--- a/F1Tippspiel.Api/F1Tippspiel.Api.csproj
+++ b/F1Tippspiel.Api/F1Tippspiel.Api.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\SeasonController.cs" />
     <Compile Include="Models\PlayerStandingsModel.cs" />
+    <Compile Include="Processors\PlayerPointsProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
