--- a/F1Tippspiel.Api/F1Tippspiel.Api.csproj
+++ b/F1Tippspiel.Api/F1Tippspiel.Api.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\SeasonController.cs" />
     <Compile Include="Models\PlayerStandingsModel.cs" />
     <Compile Include="Processors\PlayerPointsProcessor.cs" />
